# finance-wep-app

./: .gitmessage.txt  README.md  db.sqlite3  models.py  pyproject.toml
analysis/: admin.py  analyzers.py  apps.py  models.py  serializer.py  signals.py  tasks.py  tests.py  text_views.py  urls.py  views.py
config/: celery.py  settings.py  urls.py  views.py
config/settings/: base.py  dev.py  prod.py
config/urls/: base.py  dev.py  prod.py
core/: apps.py
core/management/commands/: wait_for_db.py
notification/: admin.py  apps.py  models.py  serializer.py  tests.py  urls.py  views.py
templates/: home.html
transaction_history/: serializeres.py  urls.py
users/: managers.py  middleware.py
users/templates/users/email/: verification_email.html
