[tool.poetry]
name = "finance-wep-app"
version = "0.1.0"
description = "Finance Manager Web Application Project Team1"
authors = ["grace287 <chenlucia287@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
djangorestframework = "^3.15.2"
psycopg2-binary = "^2.9.10"
psycopg2 = "^2.9.10"


[tool.poetry.group.dev.dependencies]
drf-spectacular = "^0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
